Tested all users endpoints, need to add pagination for followers/ees
