# back/routes/userRouter.js
@@ -1,8 +1,9 @@
 import express from 'express';
 import { registrationHandler } from '../controllers/userController.js';
 import { bodyValidationMiddleware } from '../middlewares/validationMiddleware.js';
-import { registrationSchema } from '../schemas/userSchemas.js';
+import authenticate from "../middlewares/authenticate.js";
 
+import { registrationSchema } from '../schemas/userSchemas.js';
 import { loginSchema } from "../schemas/usersSchemas.js";
 import {
   login,
@@ -10,7 +11,13 @@ import {
   getCurrent,
   getUserById
 } from "../controllers/authControllers.js";
-import authenticate from "../middlewares/authenticate.js";
+
+import {
+  followUser,
+  unfollowUser,
+  getFollowers,
+  getFollowing,
+} from "../controllers/follows.js";
 
 import {
   updateAvatar
@@ -18,11 +25,17 @@ import {
 import upload from "../middlewares/upload.js";
 
 const userRouter = express.Router()
-    .post("/registration", bodyValidationMiddleware(registrationSchema), registrationHandler)
+    .post("/register", bodyValidationMiddleware(registrationSchema), registrationHandler)
     .post("/login", bodyValidationMiddleware(loginSchema), login)
     .post("/logout", authenticate, logout)
     .get("/me", authenticate, getCurrent)
-    .patch("/avatars", authenticate, upload.single("avatar"), updateAvatar)
+    .patch("/avatar", authenticate, upload.single("avatar"), updateAvatar)
+
+    .get("/:id/followers", authenticate, getFollowers) // Список тих, хто підписаний на вказаного користувача
+    .get("/followees", authenticate, getFollowing) // Список тих, на кого підписаний користувач
+    .post("/followees/:id", authenticate, followUser) // Підписка
+    .delete("/followees/:id", authenticate, unfollowUser) // Відписка
+
     .get("/:id", getUserById);
 
 export default userRouter;
